[package]
name = "snconvert"
version = "0.1.1"
edition = "2021"
authors = ["Tiffany Gerstmeyr, <tiffgerst@gmail.com>, Leonard Paturel <leonardpaturel@email.com>"]
license = "MIT"
description = "A CLI tool to convert common starknet types"
readme = "README.md"
homepage = "https://github.com/Leonard-Pat/starknet-converter-cli"
repository = "https://github.com/Leonard-Pat/starknet-converter-cli"
keywords = ["cli", "starknet", "converter"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
starknet-core = "0.11.1"

